--- a/SailScores.Web/Views/Home/News.cshtml
+++ b/SailScores.Web/Views/Home/News.cshtml
@@ -54,13 +54,37 @@
     <hr />
 
     <h3>December 21st, 2023</h3>
-    <h5>Making a list...</h5>
+    <h5>&#x1F384; Making a list...</h5>
     <p>We've started a mailing list for SailScores users. Sign up using the form above
         to receive an occasional email notification of new SailScores features
         and updates as well as tips for using the site.
         Emails won't be very frequent: averaging less than one a month.
     </p>
     <p>We'll continue to update this page as significant updates are made as well.
+    </p>
+    <h5>&#x1F381; and checking it twice...</h5>
+    <p>"What if we scored this series differently?" The biggest strength of SailScores
+        is the instant sharing of results when a race is saved. No messing about
+        with copying PDFs or changing file names. But previously, this came
+        with a downside: experimenting with different scoring systems might
+        change the public-facing results.
+    </p>
+    <p>To address this we've added a new "What if?" feature. Accessible to scorekeepers
+        for their club's series, it's tucked in the optional Additional Settings section.
+        Instead of changing the series scoring system, use the <b>Try Different Scoring</b>
+        button to walk through options to change the scoring system or discards.
+        The results will be shown with an indicator to highlight any position changes from
+        the currently active scoring system.
+    </p>
+    <p>While this feature won't be used much, it should give clubs
+        options and confidence that they are using a solid scoring system.</p>
+    <p><em>Note: to try a different system with club specific scoring codes, create
+        the system in your club admin page and then use the "Try Different Scoring"
+        button.</em></p>
+    <h5>&#x1F385; Gonna find out who's naughty and nice</h5>
+    <p>A big behind the scenes update: we've updated the code to .Net 8. If all goes
+        according to plan, the only noticeable change be a faster site. Please 
+        <a href="mailto:info@sailscores.com">let us know</a> if you see any other issues.
     </p>
     <br />
     <h3>November 18th, 2023</h3>
