--- a/SailScores.Web/Views/Home/News.cshtml
+++ b/SailScores.Web/Views/Home/News.cshtml
@@ -55,6 +55,7 @@
 
     <h3>December 21st, 2023</h3>
     <h5>&#x1F384; Making a list...</h5>
+    <p><i>[published in January 2024, but I wrote this a few weeks ago, and I like the theme too much to change it.]</i></p>
     <p>We've started a mailing list for SailScores users. Sign up using the form above
         to receive an occasional email notification of new SailScores features
         and updates as well as tips for using the site.
@@ -224,11 +225,10 @@
 </h3>
 <h5>Happy New Year!</h5>
 <p>
-    New <a href="https://www.sailing.org/documents/racingrules/index.php" target="_blank">
-        Racing
-        Rules of Sailing (RRS)
-    </a> became effective today, January 1. There are a couple of minor
-    changes to scoring in the new rules. SailScores has been updated to be in compliance
+        New
+        <a href="https://www.sailing.org/inside-world-sailing/rules-regulations/racing-rules-of-sailing/" target="_blank">Racing
+        Rules of Sailing (RRS)</a> became effective today, January 1. There are a couple
+        of minor changes to scoring in the new rules. SailScores has been updated to be in compliance
     with the new rules.
     <ul>
         <li>
