--- a/SailScores.Web/Views/Shared/Error.cshtml
+++ b/SailScores.Web/Views/Shared/Error.cshtml
@@ -10,5 +10,10 @@
     Don't worry, it's probably us, not you.
 </h3>
 <p>
-    We've logged the error and will let people know that something went wrong.
+    We've logged the error and will let people know that something went wrong. You can
+    help us resolve this by emailing a description of what you were doing when the
+    error occurred to
+    <a href="mailto:info@sailscores.com">info@sailscores.com</a>.
+    
+    Thank you...
 </p>
