Bugfix for Whatif
 when using club default scoring.

--- a/SailScores.Web/Views/Series/Details.cshtml
+++ b/SailScores.Web/Views/Series/Details.cshtml
@@ -21,6 +21,7 @@
 
 <div class="row">
     <div class="col-md-8">
+        @Model.Item.Season.Name
         <h1 class="h2">
             @Model.Item.Name
             @if(Model.CanEdit)
