IndexNow and some SEO

--- a/SailScores.Web/Views/Home/Index.cshtml
+++ b/SailScores.Web/Views/Home/Index.cshtml
@@ -1,7 +1,7 @@
 ﻿@model SailScores.Web.Models.SailScores.SiteHomePageModel
 @{
-    ViewData["Title"] = "SailScores";
-    ViewData["MetaDescription"] = "Fast mobile-friendly web-based sailing scores";
+    ViewData["Title"] = "SailScores - Scoring for One-Design Sailing";
+    ViewData["MetaDescription"] = "Fast web-based mobile-friendly scores for sailing clubs";
     ViewData["MetaKeywords"] = "sailing race scoring results scores sail web mobile-friendly club series free";
 }
 <h1 class="display-4">SailScores</h1>
