--- a/SailScores.Web/Views/Account/Register.cshtml
+++ b/SailScores.Web/Views/Account/Register.cshtml
@@ -6,9 +6,13 @@
 <h2>@ViewData["Title"]</h2>
 
 <div class="row">
-    <div class="col-md-8 col-xl-4">
+    <p class="col-md-8 col-xl-4">
         <form asp-route-returnUrl="@ViewData["ReturnUrl"]" method="post">
             <h4>Create a new account:</h4>
+            <p class="lead">
+                <strong>Note</strong> SailScores accounts will only enable
+                features for users set up as scorekeepers.
+            </p>
             <hr />
             <div asp-validation-summary="All" class="text-danger"></div>
             <div class="form-group">
