--- a/SailScores.Web/Views/Fleet/Edit.cshtml
+++ b/SailScores.Web/Views/Fleet/Edit.cshtml
@@ -87,19 +87,28 @@
                 <span asp-validation-for="BoatClassIds" class="text-danger"></span>
             </div>
             <div id="boatSelectGroup" class="form-group">
-                <label asp-for="CompetitorIds" class="control-label">Competitors</label>
-                <select multiple asp-for="CompetitorIds" class="form-control custom-select selectpicker">
-                    @foreach (var competitor in Model.CompetitorOptions.OrderBy(c => c.SailNumber)
-                    .ThenBy(c => c.AlternativeSailNumber)
-                    .ThenBy(c => c.Name))
+                <div class="row">
+                    <div class="col-8 col-md-6">
+                        <label asp-for="CompetitorIds" class="control-label">Competitors</label>
+                    </div>
+                    <div class="col-4 col-md-6">
+                        <button type="button" class="btn btn-outline-warning btn-sm" id="inactiveCompButton">
+                            Remove Inactive
+                        </button>
+                    </div>
+                </div>
+                <select multiple asp-for="CompetitorIds" id="competitors" class="form-control custom-select selectpicker">
+                    @foreach (var competitor in Model.CompetitorOptions)
                     {
-                        <option value="@competitor.Id" selected="@(Model.CompetitorIds.Contains(competitor.Id))">
+                        <option value="@competitor.Id"
+                                selected="@(Model.CompetitorIds.Contains(competitor.Id))" 
+                                data-active="@competitor.IsActive">
                             @competitor.SailNumber - @competitor.Name (@competitor.BoatClass.Name)
                         </option>
                     }
                 </select>
                 <span asp-validation-for="CompetitorIds" class="text-danger"></span>
-            </div>            
+            </div>
             <div id="compCreateGroup" class="form-group">
                 <input id="createCompButton" type="button" value="Create New Competitor" class="btn btn-outline-primary btn-block" data-toggle="modal" data-target="#createCompetitor" />
             </div>
@@ -123,26 +132,30 @@
 
 @await Html.PartialAsync("_competitorCreate", Model)
 @section Scripts {
-
-<script type="text/javascript">
+    <script type="text/javascript">
         function checkFleetOptionVisibility() {
-        var f = document.getElementById('fleetType');
-        var fType = f.options[f.selectedIndex].text;
-        if (fType.indexOf('Class') > -1) {
-            document.getElementById('classSelectGroup').style.display = 'block';
-        } else {
-            document.getElementById('classSelectGroup').style.display = 'none';
-        }
-        if (fType.indexOf('Selected Boats') > -1) {
-            document.getElementById('boatSelectGroup').style.display = 'block';
-            document.getElementById('compCreateGroup').style.display = 'block';
-        } else {
-            document.getElementById('boatSelectGroup').style.display = 'none';
-            document.getElementById('compCreateGroup').style.display = 'none';
-        }
-    };
+            var f = document.getElementById('fleetType');
+            var fType = f.options[f.selectedIndex].text;
+            if (fType.indexOf('Class') > -1) {
+                document.getElementById('classSelectGroup').style.display = 'block';
+            } else {
+                document.getElementById('classSelectGroup').style.display = 'none';
+            }
+            if (fType.indexOf('Selected Boats') > -1) {
+                document.getElementById('boatSelectGroup').style.display = 'block';
+                document.getElementById('compCreateGroup').style.display = 'block';
+            } else {
+                document.getElementById('boatSelectGroup').style.display = 'none';
+                document.getElementById('compCreateGroup').style.display = 'none';
+            }
+        };
         checkFleetOptionVisibility();
-</script>
+        function removeInactiveComps() {
+                $('#competitors option[data-active="False"]').remove();
+                $('#competitors').selectpicker('refresh');
+        }
+        document.getElementById("inactiveCompButton").onclick = removeInactiveComps;
+    </script>
     
     <script src="~/js/fleetEditor.min.js" asp-append-version="true"></script>
     @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
