News and Privacy updates

--- a/SailScores.Web/Views/Home/News.cshtml
+++ b/SailScores.Web/Views/Home/News.cshtml
@@ -53,38 +53,110 @@
     </div>
     <hr />
 
+    <h3>December 30th, 2024</h3>
+    <h5>&#129346; 2024 Year in Review & Winter updates &#x2746;</h5>
+    <p>
+        SailScores continues to help plenty of sailing clubs and sailors. 2024 by the numbers:
+        <ul>
+            <li>32 clubs scored at least one race on the site</li>
+            <li> 19 of those were new to SailScores this year</li>
+            <li>Over 1700 races were scored in 232 different series</li>
+            <li>Over 14,800 individual results were entered.</li>
+            <li>
+                The year's
+                <a href="https://www.sailscores.com/D6BISF/2024/MondayNightRacing"
+                   target="_blank">largest series</a> had 62 races.
+            </li>
+            <li>
+                SailScores continues
+                to be popular with radio control sailing fleets and other clubs that want
+                scores quickly for a single day of sailing; 149 of the series lasted a
+                single day. 33 of those had 10 or more races in a single day!
+            </li>
+        </ul>
+    </p>
+    <p>
+        The SailScores website had about three hours of slow or failing responses
+        during the year. Digging into the cause of those, we had outgrown our
+        cloud resources, so we added more server capacity in October. (Turns out
+        that calculating discards for Cox-Sprague takes more effort than
+        plain ol' Appendix A.)
+    </p>
+    <h5>Updates</h5>
+    <p>
+        We neglected to post updates for sites changes made during 2024. They 
+        were mostly small bug fixes, with a few obscure new features.
+        Today we're adding a few more small features and fixes, getting ready
+        for the new Rules (RRS), and setting the site up for other tweaks in 2025.
+    </p>
+    <p>
+        Two tiny changes bring SailScores into compliance with the
+        <a href="https://www.sailing.org/inside-world-sailing/rules-regulations/racingrules/"
+           target="_blank">Racing Rules of Sailing 2025-2028</a>. The description
+        of two Scoring Codes have been changed. The new descriptions (for existing codes) are:
+        <dl class="row">
+            <dt class="col-sm-2">SCP</dt>
+            <dd class="col-sm-10">Scoring Penalty imposed</dd>
+
+            <dt class="col-sm-2">NSC</dt>
+            <dd class="col-sm-10">Did not sail the course (other than DNC, DNS, OCS and
+                    DNF)
+            </dd>
+        </dl>
+    </p>
+    <p>
+        For scorekeepers, we've made competitor sorting more consistent through
+        the site by sorting as numbers and not alphabetically when possible.
+    </p>
+    <p> Also for scorekeepers, a couple of settings on the competitor list page
+        are now saved for future page loads: the sort order and showing
+        competitors that are set of "inactive." 
+    </p>
+    <p>Here's to a happy and successful 2025 filled with fair winds and speedy sailing!</p>
+    <br />
     <h3>December 21st, 2023</h3>
     <h5>&#x1F384; Making a list...</h5>
     <p><i>[published in January 2024, but I wrote this a few weeks ago, and I like the theme too much to change it.]</i></p>
-    <p>We've started a mailing list for SailScores users. Sign up using the form above
+    <p>
+        We've started a mailing list for SailScores users. Sign up using the form above
         to receive an occasional email notification of new SailScores features
         and updates as well as tips for using the site.
         Emails won't be very frequent: averaging less than one a month.
     </p>
-    <p>We'll continue to update this page as significant updates are made as well.
+    <p>
+        We'll continue to update this page as significant updates are made as well.
     </p>
     <h5>&#x1F381; and checking it twice...</h5>
-    <p>"What if we scored this series differently?" The biggest strength of SailScores
+    <p>
+        "What if we scored this series differently?" The biggest strength of SailScores
         is the instant sharing of results when a race is saved. No messing about
         with copying PDFs or changing file names. But previously, this came
         with a downside: experimenting with different scoring systems might
         change the public-facing results.
     </p>
-    <p>To address this we've added a new "What if?" feature. Accessible to scorekeepers
+    <p>
+        To address this we've added a new "What if?" feature. Accessible to scorekeepers
         for their club's series, it's tucked in the optional Additional Settings section.
         Instead of changing the series scoring system, use the <b>Try Different Scoring</b>
         button to walk through options to change the scoring system or discards.
         The results will be shown with an indicator to highlight any position changes from
         the currently active scoring system.
     </p>
-    <p>While this feature won't be used much, it should give clubs
-        options and confidence that they are using a solid scoring system.</p>
-    <p><em>Note: to try a different system with club specific scoring codes, create
-        the system in your club admin page and then use the "Try Different Scoring"
-        button.</em></p>
+    <p>
+        While this feature won't be used much, it should give clubs
+        options and confidence that they are using a solid scoring system.
+    </p>
+    <p>
+        <em>
+            Note: to try a different system with club specific scoring codes, create
+            the system in your club admin page and then use the "Try Different Scoring"
+            button.
+        </em>
+    </p>
     <h5>&#x1F385; Gonna find out who's naughty and nice</h5>
-    <p>A big behind the scenes update: we've updated the code to .Net 8. If all goes
-        according to plan, the only noticeable change be a faster site. Please 
+    <p>
+        A big behind the scenes update: we've updated the code to .Net 8. If all goes
+        according to plan, the only noticeable change be a faster site. Please
         <a href="mailto:info@sailscores.com">let us know</a> if you see any other issues.
     </p>
     <br />
