--- a/SailScores.Web/Views/Home/Privacy.cshtml
+++ b/SailScores.Web/Views/Home/Privacy.cshtml
@@ -128,7 +128,9 @@
             <strong>Information from cookies &amp; other technologies:</strong> A cookie is
             a string of information that a website stores on a visitor’s computer, and that the
             visitor’s browser provides to the website each time the visitor returns. SailScores
-            uses cookies to allow logged in users to stay logged in across sessions.
+            uses cookies to allow logged in users to stay logged in across sessions and to keep
+            track of a few user preferences, such as sort order. Users who do not log in will
+            not receive cookies from SailScores.
         </li>
     </ul>
 </section>
@@ -469,6 +471,8 @@
 <section id="change-log">
     <h3>Change log</h3>
     <ul>
+        <li><em>December 29, 2024: </em>Added preference storage to cookie description. We have added
+            cookies to store Scorekeeper page display preferences.</li>
         <li><em>April 25, 2021: </em>Added specific mention of speech recognition services provided by
         Microsoft. To process speech, data will be processed by Microsoft.</li>
         <li><em>December 23, 2020: </em>Removed reference to blocking cookies with browser. Most users
