--- a/SailScores.Web/Views/Shared/_ScoreCell.cshtml
+++ b/SailScores.Web/Views/Shared/_ScoreCell.cshtml
@@ -5,7 +5,7 @@
 @if (Model != null && Model.Result != null )
 {
     <td class="text-center
-        @(Model.Result.ScoreValue == 1 && !Model.IsPercentSystem && String.IsNullOrEmpty(Model.Result.Code) ? "finish-first ": "")
+        @(Model.Result.Place == 1 && !Model.IsPercentSystem && String.IsNullOrEmpty(Model.Result.Code) ? "finish-first ": "")
         @(Model.Result.ScoreValue == 2 && !Model.IsPercentSystem && String.IsNullOrEmpty(Model.Result.Code) ? "finish-second " : "")
         @(Model.Result.ScoreValue == 3 && !Model.IsPercentSystem && String.IsNullOrEmpty(Model.Result.Code) ? "finish-third " : "")
         @(Model.IsPercentSystem && String.IsNullOrEmpty(Model.Result.Code) && Model.Result.Place == 1 ? "finish-first" : "")
