--- a/SailScores.Web/Views/Home/News.cshtml
+++ b/SailScores.Web/Views/Home/News.cshtml
@@ -52,9 +52,18 @@
         <script type="text/javascript" src="//s3.amazonaws.com/downloads.mailchimp.com/js/mc-validate.js"></script><script type="text/javascript">(function ($) { window.fnames = new Array(); window.ftypes = new Array(); fnames[0] = 'EMAIL'; ftypes[0] = 'email'; fnames[1] = 'FNAME'; ftypes[1] = 'text'; fnames[2] = 'LNAME'; ftypes[2] = 'text'; fnames[3] = 'ADDRESS'; ftypes[3] = 'address'; fnames[4] = 'PHONE'; ftypes[4] = 'phone'; fnames[5] = 'BIRTHDAY'; ftypes[5] = 'birthday'; fnames[6] = 'MMERGE6'; ftypes[6] = 'text'; }(jQuery)); var $mcj = jQuery.noConflict(true);</script>
     </div>
     <hr />
+    <h3>January 23rd, 2025</h3>
+    <h5>Racing Rules of Sailing 2025-2028</h5>
+    <p>
+        In addition to some minor changes to a few scoring codes, RRS 2025-2028 also includes a change to how scoring
+        penalties are calculated. A Scoring Penalty should now be rounded to a single decimal place, like other calculated scores.
+        Previously, penalties were rounded to the nearest whole number. The default scoring system in SailScores has been updated
+        to comply with the new rules. There are also base systems added for those who need to use the pre-2025 scoring systems.
+    </p>
 
     <h3>December 30th, 2024</h3>
     <h5>&#129346; 2024 Year in Review & Winter updates &#x2746;</h5>
+    <h5><em>[Edited on January 23, 2025: no longer suggests two minimal changes were only RRS2025 scoring changes.]</em></h5>
     <p>
         SailScores continues to help plenty of sailing clubs and sailors. 2024 by the numbers:
         <ul>
@@ -90,7 +99,7 @@
         for the new Rules (RRS), and setting the site up for other tweaks in 2025.
     </p>
     <p>
-        Two tiny changes bring SailScores into compliance with the
+        Two small changes bring SailScores closer to compliance with the
         <a href="https://www.sailing.org/inside-world-sailing/rules-regulations/racingrules/"
            target="_blank">Racing Rules of Sailing 2025-2028</a>. The description
         of two Scoring Codes have been changed. The new descriptions (for existing codes) are:
