Better warning and Race Name used more
Closes SailScores#331 & SailScores#330

--- a/SailScores.Web/Views/Regatta/Create.cshtml
+++ b/SailScores.Web/Views/Regatta/Create.cshtml
@@ -101,7 +101,7 @@
                                     data-toggle="popover"
                                     data-placement="top"
                                     data-trigger="focus hover"
-                                    data-content="May be changed later.>
+                                    data-content="May be changed later.">
                                     <span class="far fa-question-circle"></span>
                                 </a>
                                 <select id="ScoringSystemId" asp-for="ScoringSystemId" class="form-control">
