Hide Dnc Discards option

--- a/SailScores.Web/Views/Regatta/Details.cshtml
+++ b/SailScores.Web/Views/Regatta/Details.cshtml
@@ -277,6 +277,7 @@
                             ExcludeCompetitorLinks = true,
                             PreferAlternativeSailNumbers = currentSeries.PreferAlternativeSailNumbers ?? false,
                             TrendLegend = trendLegend,
+                            HideDncDiscards = currentSeries.HideDncDiscards,
                             UpdatedDate = currentSeries.UpdatedDate
                         };
 
