--- a/SailScores.Web/Views/Series/Create.cshtml
+++ b/SailScores.Web/Views/Series/Create.cshtml
@@ -92,6 +92,12 @@
                                     <label class="form-check-label"> Exclude from competitor summary statistics</label>
                                 </div>
                             </div>
+                            <div class="form-group">
+                                <div class="form-check">
+                                    <input class="form-check-input" asp-for="HideDncDiscards" />
+                                    <label class="form-check-label"> Hide discarded DNC scores (Show as blank.)</label>
+                                </div>
+                            </div>
                         </div>
                     </div>
                 </div>
