--- a/SailScores.Web/Views/Series/Details.cshtml
+++ b/SailScores.Web/Views/Series/Details.cshtml
@@ -99,6 +99,7 @@
         ExcludeCompetitorLinks = false,
         PreferAlternativeSailNumbers = Model.Item.PreferAlternativeSailNumbers ?? false,
         TrendLegend = trendLegend,
+        HideDncDiscards = Model.Item.HideDncDiscards,
         UpdatedDate = Model.Item.UpdatedDate
     };
 }
