--- a/SailScores.Web/Views/Series/ExportHtml.cshtml
+++ b/SailScores.Web/Views/Series/ExportHtml.cshtml
@@ -73,6 +73,7 @@
                     ExcludeCompetitorLinks = true,
                     PreferAlternativeSailNumbers = Model.PreferAlternativeSailNumbers ?? false,
                     TrendLegend = trendLegend,
+                    HideDncDiscards = Model.HideDncDiscards,
                     UpdatedDate = Model.UpdatedDate
                 };
 
