--- a/SailScores.Web/Views/Shared/_ResultsTable.cshtml
+++ b/SailScores.Web/Views/Shared/_ResultsTable.cshtml
@@ -281,7 +281,8 @@
                                {
                                    Result = result,
                                     IsPercentSystem = Model.Results.IsPercentSystem,
-                                    ScoreCodesUsed = Model.Results.ScoreCodesUsed
+                                    ScoreCodesUsed = Model.Results.ScoreCodesUsed,
+                                    HideDncDiscards = Model.HideDncDiscards
                                })
                         }
                         prevRaceDate = race.Date;
